= HEAD

* Allow returning :ObjectSpace for require block to signal that ObjectSpace should be used to determine constants (jeremyevans)

= 1.2.1 (2015-01-27)

* Fix homepage in gemspec (jeremyevans)

= 1.2.0 (2015-01-24)

* Add Unreloader#record_split_class, for handling classes split into multiple files (jeremyevans)

* Add Unreloader#reload!, for manually checking for changed files, useful for non-rack applications (jeremyevans)

* Make most methods in the Reloader private (jeremyevans)

* Separate reloading logic into separate file, so using unreloader in production takes less memory (jeremyevans)

* Add the ability to record dependencies, making it possible to correctly support modules and superclasses (jeremyevans)

* Add :reload option, set to false to not support reloading, useful in production mode (jeremyevans)

* Document that setting the :cooldown option to nil makes the Unreloader not reload (celsworth, jeremyevans) (#3)

* Handle files in subdirectories when monitoring directories (celsworth) (#2)

= 1.1.0 (2014-09-25)

* Allow monitoring of directories, so that new files can be picked up, and deleted files removed (jeremyevans)

* Support ruby 1.8.7 (jeremyevans)

= 1.0.0 (2014-08-12)

* Ignore anonymous classes/modules (jeremyevans)

* Log when attempting to remove a constant that doesn't exist (jeremyevans)

* Allow specifying constants to remove via a block to require, instead of using ObjectSpace (jeremyevans)

* Don't unload constants defined in parents when loading dependencies (jeremyevans)

= 0.9.0 (2014-08-04)

* Initial public release